# Guardian

./: .env.example  .gitignore  .ruff.toml  Caddyfile  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
alertmanager/: alertmanager.yml
ansible/: site.yml
ansible/inventory/: hosts.ini
ansible/roles/common/tasks/: main.yml
ansible/roles/control_plane/tasks/: main.yml
ansible/roles/control_plane/templates/: alertmanager.yml.j2  env.j2  node-exporter.yml.j2  python-exporter.yml.j2
ansible/roles/node_exporter/tasks/: main.yml
ansible/roles/python_exporter/tasks/: main.yml
ansible/roles/python_exporter/templates/: guardian-exporter.service.j2
docs/: AGENT_BEHAVIOUR_PLAYBOOK.md  AGENT_BRIEF.md  ARCHITECTURE.md  DEPLOYMENT.md  MTTR.md  POSTMORTEM_TEMPLATE.md  PRD.md  SLO.md
exporter/: Dockerfile  pyproject.toml
exporter/src/guardian_exporter/: __init__.py  app.py
exporter/state/: sample_metrics.json
exporter/tests/: test_app.py
grafana/dashboards/: fleet-overview.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
prometheus/: prometheus.yml
prometheus/rules/: host-alerts.yml
runbooks/: high_cpu.md  service_down.md
scripts/: induce-cpu-spike.sh
webhook/: Dockerfile  app.py  pyproject.toml
webhook/config/: runbook_map.json
webhook/runbooks/: restart-service.sh  stop-cpu-stress.sh
webhook/tests/: test_webhook.py
