[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-exporter"
version = "0.1.0"
description = "Guardian custom application exporter"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4.0",
  "prometheus-client>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

